tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/cors/a/to_b/_test_context/VirtualService.2125674155.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - corsPolicy:
      allowCredentials: false
      allowHeaders:
      - X-Foo-Bar
      - X-Foo-Baz
      allowMethods:
      - POST
      - GET
      allowOrigins:
      - exact: cors.com
      maxAge: 24h
    route:
    - destination:
        host: b
